[package]
name = "dash_rust"
version = "0.1.0"
authors = ["Evan Ritscher <evan.ritscher@gmail.com>"]
edition = "2018"

[[bin]]
name = "dash-hue-controller"
path = "src/main/main.rs"

[[bin]]
name = "find-buttons"
path = "src/finder/main.rs"

[dependencies]
pnet = "0.22.0"
lazy_static = "1.3.0"
clap = "2.32.0"
serde = "1.0.89"
serde_derive= "1.0.0"
serde_json = "1.0.39"
reqwest = "0.9.11"
